@@ -169,6 +169,7 @@ else:
                 "src/geos_funcs_Y_b.c",
                 "src/geos_funcs_Y_i.c",
                 "src/geos_funcs_Yi_Y.c",
+                "src/geos_funcs_O_b.c",
                 "src/vector.c",
             ],
             **ext_options,
