@@ -705,14 +705,16 @@ def test_prepare():
     arr = np.array([shapely.points(1, 1), None, shapely.box(0, 0, 1, 1)])
     assert arr[0]._geom_prepared == 0
     assert arr[2]._geom_prepared == 0
-    shapely.prepare(arr)
+    actual = shapely.prepare(arr)
+    assert np.all(actual == [True, False, True])
     assert arr[0]._geom_prepared != 0
     assert arr[1] is None
     assert arr[2]._geom_prepared != 0
 
     # preparing again actually does nothing
     original = arr[0]._geom_prepared
-    shapely.prepare(arr)
+    actual = shapely.prepare(arr)
+    assert np.all(actual == [False, False, False])
     assert arr[0]._geom_prepared == original
 
 
@@ -721,11 +723,38 @@ def test_destroy_prepared():
     shapely.prepare(arr)
     assert arr[0]._geom_prepared != 0
     assert arr[2]._geom_prepared != 0
-    shapely.destroy_prepared(arr)
+    actual = shapely.destroy_prepared(arr)
+    assert np.all(actual == [True, False, True])
     assert arr[0]._geom_prepared == 0
     assert arr[1] is None
     assert arr[2]._geom_prepared == 0
-    shapely.destroy_prepared(arr)  # does not error
+    actual = shapely.destroy_prepared(arr)  # does not error
+    assert np.all(actual == [False, False, False])
+
+
+def test_prepare_scalar():
+    geom = shapely.Point(1, 1)
+    assert geom._geom_prepared == 0
+    actual = shapely.lib.prepare_scalar(geom)
+    assert actual is True
+    assert geom._geom_prepared != 0
+
+    # preparing again actually does nothing
+    original = geom._geom_prepared
+    actual = shapely.lib.prepare_scalar(geom)
+    assert actual is False
+    assert geom._geom_prepared == original
+
+
+def test_destroy_prepared_scalar():
+    geom = shapely.Point(1, 1)
+    shapely.lib.prepare_scalar(geom)
+    assert geom._geom_prepared != 0
+    actual = shapely.lib.destroy_prepared_scalar(geom)
+    assert actual is True
+    assert geom._geom_prepared == 0
+    actual = shapely.lib.destroy_prepared_scalar(geom)  # does not error
+    assert actual is False
 
 
 @pytest.mark.parametrize("geom_type", [None, GeometryType.MISSING, -1])
