@@ -1,0 +1,6 @@
+#ifndef _GEOS_FUNCS_O_B_H
+#define _GEOS_FUNCS_O_B_H
+
+extern int init_geos_funcs_O_b(PyObject* m, PyObject* d);
+
+#endif
