@@ -21,6 +21,7 @@
 #include "geos_funcs_Y_b.h"
 #include "geos_funcs_Y_i.h"
 #include "geos_funcs_Yi_Y.h"
+#include "geos_funcs_O_b.h"
 
 /* This tells Python what methods this module has. */
 static PyMethodDef GeosModule[] = {
@@ -114,6 +115,10 @@ PyMODINIT_FUNC PyInit_lib(void) {
   };
 
   if (init_geos_funcs_Yi_Y(m, d) < 0) {
+    return NULL;
+  };
+
+  if (init_geos_funcs_O_b(m, d) < 0) {
     return NULL;
   };
 
