@@ -59,44 +59,6 @@
     };                                              \
   }
 
-/* Define the object -> bool functions (O_b) which do not raise on non-geom objects*/
-static char IsMissing(void* context, PyObject* obj) {
-  GEOSGeometry* g = NULL;
-  if (!get_geom((GeometryObject*)obj, &g)) {
-    return 0;
-  };
-  return g == NULL;  // get_geom sets g to NULL for None input
-}
-static void* is_missing_data[1] = {IsMissing};
-static char IsGeometry(void* context, PyObject* obj) {
-  GEOSGeometry* g = NULL;
-  if (!get_geom((GeometryObject*)obj, &g)) {
-    return 0;
-  }
-  return g != NULL;
-}
-static void* is_geometry_data[1] = {IsGeometry};
-static char IsValidInput(void* context, PyObject* obj) {
-  GEOSGeometry* g = NULL;
-  return get_geom((GeometryObject*)obj, &g);
-}
-static void* is_valid_input_data[1] = {IsValidInput};
-typedef char FuncGEOS_O_b(void* context, PyObject* obj);
-static char O_b_dtypes[2] = {NPY_OBJECT, NPY_BOOL};
-static void O_b_func(char** args, const npy_intp* dimensions, const npy_intp* steps, void* data) {
-  FuncGEOS_O_b* func = (FuncGEOS_O_b*)data;
-  GEOS_INIT_THREADS;
-  UNARY_LOOP {
-    CHECK_SIGNALS_THREADS(i);
-    if (errstate == PGERR_PYSIGNAL) {
-      break;
-    }
-    *(npy_bool*)op1 = func(ctx, *(PyObject**)ip1);
-  }
-  GEOS_FINISH_THREADS;
-}
-static PyUFuncGenericFunction O_b_funcs[1] = {&O_b_func};
-
 /* Define the geom, geom -> bool functions (YY_b) */
 static void* equals_data[1] = {GEOSEquals_r};
 static void* equals_identical_data[1] = {PyGEOSEqualsIdentical};
@@ -312,85 +274,6 @@ finish:
   GEOS_FINISH_THREADS;
 }
 static PyUFuncGenericFunction Ydd_b_p_funcs[1] = {&Ydd_b_p_func};
-
-static char is_prepared_dtypes[2] = {NPY_OBJECT, NPY_BOOL};
-static void is_prepared_func(char** args, const npy_intp* dimensions, const npy_intp* steps,
-                             void* data) {
-  GEOSGeometry* in1 = NULL;
-  GEOSPreparedGeometry* in1_prepared = NULL;
-  char errstate = PGERR_SUCCESS;
-
-  Py_BEGIN_ALLOW_THREADS;
-
-  UNARY_LOOP {
-    CHECK_SIGNALS_THREADS(i);
-    if (errstate == PGERR_PYSIGNAL) {
-      break;
-    }
-    /* get the geometry: return on error */
-    if (!get_geom_with_prepared(*(GeometryObject**)ip1, &in1, &in1_prepared)) {
-      errstate = PGERR_NOT_A_GEOMETRY;
-      break;
-    }
-    *(npy_bool*)op1 = (in1_prepared != NULL);
-  }
-
-  Py_END_ALLOW_THREADS;
-}
-static PyUFuncGenericFunction is_prepared_funcs[1] = {&is_prepared_func};
-
-/* Define the geom -> no return value functions (Y) */
-static char PrepareGeometryObject(void* ctx, GeometryObject* geom) {
-  if (geom->ptr_prepared == NULL) {
-    geom->ptr_prepared = (GEOSPreparedGeometry*)GEOSPrepare_r(ctx, geom->ptr);
-    if (geom->ptr_prepared == NULL) {
-      return PGERR_GEOS_EXCEPTION;
-    }
-  }
-  return PGERR_SUCCESS;
-}
-static char DestroyPreparedGeometryObject(void* ctx, GeometryObject* geom) {
-  if (geom->ptr_prepared != NULL) {
-    GEOSPreparedGeom_destroy_r(ctx, geom->ptr_prepared);
-    geom->ptr_prepared = NULL;
-  }
-  return PGERR_SUCCESS;
-}
-
-static void* prepare_data[1] = {PrepareGeometryObject};
-static void* destroy_prepared_data[1] = {DestroyPreparedGeometryObject};
-typedef char FuncPyGEOS_Y(void* ctx, GeometryObject* geom);
-static char Y_dtypes[1] = {NPY_OBJECT};
-static void Y_func(char** args, const npy_intp* dimensions, const npy_intp* steps, void* data) {
-  FuncPyGEOS_Y* func = (FuncPyGEOS_Y*)data;
-  GEOSGeometry* in1 = NULL;
-  GeometryObject* geom_obj = NULL;
-
-  GEOS_INIT;
-
-  NO_OUTPUT_LOOP {
-    CHECK_SIGNALS(i);
-    if (errstate == PGERR_PYSIGNAL) {
-      goto finish;
-    }
-    geom_obj = *(GeometryObject**)ip1;
-    if (!get_geom(geom_obj, &in1)) {
-      errstate = PGERR_GEOS_EXCEPTION;
-      goto finish;
-    }
-    if (in1 != NULL) {
-      errstate = func(ctx, geom_obj);
-      if (errstate != PGERR_SUCCESS) {
-        goto finish;
-      }
-    }
-  }
-
-finish:
-
-  GEOS_FINISH;
-}
-static PyUFuncGenericFunction Y_funcs[1] = {&Y_func};
 
 /* Define the geom, double -> geom functions (Yd_Y) */
 static void* GEOSInterpolateProtectEmpty_r(void* context, void* geom, double d) {
@@ -3187,11 +3070,6 @@ finish:
 }
 static PyUFuncGenericFunction to_geojson_funcs[1] = {&to_geojson_func};
 
-#define DEFINE_O_b(NAME)                                                       \
-  ufunc = PyUFunc_FromFuncAndData(O_b_funcs, NAME##_data, O_b_dtypes, 1, 1, 1, \
-                                  PyUFunc_None, #NAME, NULL, 0);               \
-  PyDict_SetItemString(d, #NAME, ufunc)
-
 #define DEFINE_YY_b(NAME)                                                        \
   ufunc = PyUFunc_FromFuncAndData(YY_b_funcs, NAME##_data, YY_b_dtypes, 1, 2, 1, \
                                   PyUFunc_None, #NAME, "", 0);                   \
@@ -3205,11 +3083,6 @@ static PyUFuncGenericFunction to_geojson_funcs[1] = {&to_geojson_func};
 #define DEFINE_Ydd_b_p(NAME)                                                           \
   ufunc = PyUFunc_FromFuncAndData(Ydd_b_p_funcs, NAME##_data, Ydd_b_p_dtypes, 1, 3, 1, \
                                   PyUFunc_None, #NAME, "", 0);                         \
-  PyDict_SetItemString(d, #NAME, ufunc)
-
-#define DEFINE_Y(NAME)                                                                   \
-  ufunc = PyUFunc_FromFuncAndData(Y_funcs, NAME##_data, Y_dtypes, 1, 1, 0, PyUFunc_None, \
-                                  #NAME, "", 0);                                         \
   PyDict_SetItemString(d, #NAME, ufunc)
 
 #define DEFINE_Yd_Y(NAME)                                                        \
@@ -3273,10 +3146,6 @@ static PyUFuncGenericFunction to_geojson_funcs[1] = {&to_geojson_func};
 int init_ufuncs(PyObject* m, PyObject* d) {
   PyObject* ufunc;
 
-  DEFINE_O_b(is_geometry);
-  DEFINE_O_b(is_missing);
-  DEFINE_O_b(is_valid_input);
-
   DEFINE_YY_b_p(disjoint);
   DEFINE_YY_b_p(touches);
   DEFINE_YY_b_p(intersects);
@@ -3291,10 +3160,6 @@ int init_ufuncs(PyObject* m, PyObject* d) {
   DEFINE_YY_b_p(covered_by);
   DEFINE_Ydd_b_p(contains_xy);
   DEFINE_Ydd_b_p(intersects_xy);
-  DEFINE_CUSTOM(is_prepared, 1);
-
-  DEFINE_Y(prepare);
-  DEFINE_Y(destroy_prepared);
 
   DEFINE_Yd_Y(line_interpolate_point);
   DEFINE_Yd_Y(line_interpolate_point_normalized);
